--- a/scripts/M10_assignment.ipynb
+++ b/scripts/M10_assignment.ipynb
@@ -274,6 +274,7 @@
     "\n",
     "#update dataframe with header \n",
     "df = pd.DataFrame(df, columns = [\"Organization Name\", \"NY Reg #\", \"EIN\" ,\"Registrant Type\",\"City\",\"State\"])\n",
+    "df.drop(0, inplace=True)",
     "display(df) #let's have a look at the data before creating the CSV file and loading it into s3"
    ]
   },
