--- a/scripts/M10_assignment_part1.ipynb
+++ b/scripts/M10_assignment_part1.ipynb
@@ -279,6 +279,7 @@
     "df = pd.DataFrame(df, columns=[\n",
     "                  \"Organization Name\", \"NY Reg #\", \"EIN\", \"Registrant Type\", \"City\", \"State\"])\n",
     "\n",
+    "df.drop(0, inplace=True)\n",
     "# let's have a look at the data before creating the CSV file and loading it into s3\n",
     "display(df)\n"
    ]
